# glibc-memcpy

./: .gitignore  .gitmodules  CMakeLists.txt  clean_result.py  for-chris.md  hjl-info.tar  memcpy-dev-v19.S  memcpy-dev-v20.S  memcpy-dev-v21.S  memcpy-dev-v22.S  out.txt  parse-collection.py  partial-results.txt  quick-parse.py  results-v12.txt  results.txt  runall-collection.py  runall-isa.py  runall.py  skl-runall.py  tmp.S
collection/avx2/: 0.S  1.S  11.S  12.S  16.S  17.S  18.S  2.S  20.S  4.S  5.S  6.S  9.S
collection/evex/: 0.S  10.S  11.S  13.S  14.S  16.S  2.S  5.S  6.S  7.S  8.S  9.S
collection/run11/: 1.S  10.S  12.S  14.S  15.S  5.S  6.S  7.S
dev-results/dev-bcmp0/: bench-bcmp0.out  bench-bcmp10.out  bench-bcmp11.out  bench-bcmp13.out  bench-bcmp14.out  bench-bcmp15.out  bench-bcmp17.out  bench-bcmp19.out  bench-bcmp3.out  bench-bcmp5.out  bench-bcmp8.out  bench-memcmp1.out  bench-memcmp10.out  (+104 more)
extra/: make-defines.py  partial-results.txt  runall.py  skl-events.txt
glibc/: memcpy-dev-avx-final.S  memcpy-dev-avx2-final.S  memcpy-dev-avx512-final.S  memcpy-dev-evex-final.S  memcpy-extra-erms.S  memcpy-extra.S
glibc-run/: 0.S  12.S  13.S  14.S  15.S  5.S  7.S  8.S  9.S  get-imps.py  imps.txt  json-parser.py  json_parser.py  out.txt  runall-memcmp.py  runall-memcpy.py  runall-new.py
hjl-info/: README.md  memcpy-glibc-obj.S  memcpy-new-obj.S  memcpy-new.S  results.txt
old-runs-scripts/: quick-parse.py  runall-isa.py  runall.py  skl-runall.py
run0/: icl-results.txt  skl-results.txt  tgl-results.txt
run1/: icl-results.txt  skl-results.txt  tgl-results.txt
run10/: icl.txt  skl.txt  tgl.txt
run11/: tgl.txt
run12/: skl.txt  tgl.txt
run13/: skl.txt  tgl.txt
run14/: icl.txt  skl.txt  tgl.txt
run15/: icl.txt  skl.txt  tgl.txt
run16/: best.txt  icl.txt  skl.txt  tgl.txt
run17/: icl.txt  skl.txt  tgl.txt
run18/: icl.txt  skl.txt  tgl.txt
run19/: icl.txt  skl.txt  tgl.txt
run2/: icl-results.txt  skl-results.txt  tgl-results.txt
run3/: icl-results.txt  skl-results.txt  tgl-results.txt
run4/: icl-results.txt  skl-results.txt  tgl-results.txt
run5/: icl  skl  tgl.txt
run6/: skl.txt  tgl.txt
run7/: skl.txt  tgl
run8/: skl-0.txt  skl-1.txt  tgl-0.txt  tgl-1.txt
run9/: icl.txt  skl.txt  tgl.txt
src/: arg.c  arg.h  common.h  config-shit.h  driver.c  error-util.c  error-util.h  inl-nops.h  macro-math.h  macro.h  memcpy-defs.c  memcpy-defs.h  memory-util.c  memory-util.h  timing.h
submission/: json-parser.py  out.txt  tmp.txt
(+115920 files in other folders)
